package main.java.td1.original.refractor.api.general;

public interface Product {
    double weight();

    double price();

}
